--- a/index.html
+++ b/index.html
@@ -1,53 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="uk">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Laboratory Form</title>
+  <meta charset="UTF-8">
+  <title>KID-41 Goncharenko Oleg</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <h1>Laboratory Form</h1>
-    <form action="https://webhook.site/c6dfdd80-7691-477c-9ed6-31a228ae013b" method="post">
-        <div>
-            <label for="firstName">First Name:</label>
-            <input type="text" id="firstName" name="firstName" required>
-        </div>
-        <div>
-            <label for="lastName">Last Name:</label>
-            <input type="text" id="lastName" name="lastName" required>
-        </div>
-        <div>
-            <label for="email">Email Address:</label>
-            <input type="email" id="email" name="email" required>
-        </div>
-        <div>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-        </div>
-        <div>
-            <label for="confirmPassword">Confirm Password:</label>
-            <input type="password" id="confirmPassword" name="confirmPassword" required>
-        </div>
-        <div>
-            <label for="birthdate">Date of Birth:</label>
-            <input type="date" id="birthdate" name="birthdate">
-        </div>
-        <div>
-            <label for="gender">Gender:</label>
-            <select id="gender" name="gender">
-                <option value="male">Male</option>
-                <option value="female">Female</option>
-                <option value="other">Other</option>
-            </select>
-        </div>
-        <div>
-            <input type="submit" value="Submit">
-        </div>
-    </form>
+  <header>
+    <nav>
+      <a href="index.html">Головна</a>
+      <a href="about/index.html">Про мене</a>
+      <a href="practices/index.html">Практичні роботи</a>
+      <a href="labs/index.html">Лабораторні заняття</a>
+    </nav>
+  </header>
+  <main>
+        <h2>Увага! Вас вітає сайт студента<span style="font-weight:bold; color:#4592BE;"> Гончаренко Олег, групи КІД-41,</span> це ще не завершений варіант, який буде дороблятись!</h2>
+     
+    <section id="about">
+      <h2>Про мене</h2>
+      <p>Я студент Державниого університету інформаційно-комунікаційних технологій, навчаюся в групі КІД-41.</p>
+      <p>Мені подобається займатися .</p>
+    </section>
+    <section id="practices">
+      <h2>Практичні роботи</h2>
+      <p>Тут я буду публікувати свої практичні роботи.</p>
+    </section>
+    <section id="labs">
+      <h2>Лабораторні заняття</h2>
+      <p>Тут я буду публікувати свої лабораторні заняття.</p>
+    </section>
+  </main>
+  <footer>
+    <p>Jek 2023</p>
+  </footer>
 </body>
-
 </html>
