--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <p>Я студент Державниого університету інформаційно-комунікаційних технологій, навчаюся в групі КІД-41.</p>
       <p>Мені подобається займатися .</p>
     </section>
-    <section id="practices">
+    <section id="pr1">
       <h2>Практичні роботи</h2>
       <p>Тут я буду публікувати свої практичні роботи.</p>
     </section>
-    <section id="labs">
+    <section id="lab1">
       <h2>Лабораторні заняття</h2>
       <p>Тут я буду публікувати свої лабораторні заняття.</p>
     </section>
