--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <a href="index.html">Головна</a>
       <a href="about/index.html">Про мене</a>
       <a href="practices/index.html">Практичні роботи</a>
-      <a href="labs/index.html">Лабораторні заняття</a>
+      <a href="lab1/index.html">Лабораторні заняття</a>
     </nav>
   </header>
   <main>
