--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
       <a href="index.html">Головна</a>
       <a href="about/index.html">Про мене</a>
-      <a href="practices/index.html">Практичні роботи</a>
+      <a href="pr1/index.html">Практичні роботи</a>
       <a href="lab1/index.html">Лабораторні заняття</a>
     </nav>
   </header>
